Primeros endpoints y modificaciones del swagger
