# src/routes/routes.ts
@@ -1,8 +1,11 @@
 import { Router, Context } from "https://deno.land/x/oak@v11.1.0/mod.ts";
 import * as todoController from "../controllers/todo.ts";
 import * as sesionController from "../controllers/sesion.controller.ts";
+import { authenticated } from "../middleware/jwt.validator.ts";
 
 export const router: Router = new Router();
+
+
 
 router.get("", (ctx: Context) => {
   ctx.response.body = "Test";
@@ -10,10 +13,37 @@ router.get("", (ctx: Context) => {
 });
 
 router
-  .get("/todos", todoController.getAllTodos)
-  .post("/todos", todoController.createTodo)
-  .get("/todos/:id", todoController.getTodoById)
-  .put("/todos/:id", todoController.updateTodoById)
-  .delete("/todos/:id", todoController.deleteTodoById)
-  .get("/usuario", todoController.getUserById)
-  .post("/sesion", sesionController.loginUser);
+  .post("/login", sesionController.loginUser) 
+  .post("/login/sso", sesionController.loginUserSSO)
+  .post("/register", sesionController.registerUser)
+  .delete("/user", authenticated, sesionController.loginUser)
+  .post("/user/recovery", sesionController.loginUser)
+  .put("/user/password", sesionController.loginUser)
+  .put("/user", authenticated, sesionController.loginUser)
+
+  .get("/me", authenticated, sesionController.loginUser)
+  .get("/likes", authenticated, sesionController.loginUser)
+  .post("/likes", authenticated, sesionController.loginUser)
+  .delete("/likes/:likeId", authenticated, sesionController.loginUser)
+
+  .get("/restaurants", authenticated, sesionController.loginUser)
+  .post("/restaurants", authenticated, sesionController.loginUser)
+  .get("/restaurants/:restaurantId", authenticated, sesionController.loginUser)
+  .put("/restaurants/:restaurantId", authenticated, sesionController.loginUser)
+  .delete("/restaurants/:restaurantId", authenticated, sesionController.loginUser)
+  .get("/restaurants/near", authenticated, sesionController.loginUser)
+
+  .post("/restaurants/score", authenticated, sesionController.loginUser)
+
+  .get("/restaurants/:restaurantId/menus", authenticated, sesionController.loginUser)
+  .post("/restaurants/:restaurantId/menus", authenticated, sesionController.loginUser)
+  .get("/restaurants/:restaurantId/menus/:menuId", authenticated, sesionController.loginUser)
+  .put("/restaurants/:restaurantId/menus/:menuId", authenticated, sesionController.loginUser)
+  .delete("/restaurants/:restaurantId/menus/:menuId", authenticated, sesionController.loginUser)
+
+  .post("/restaurants/:restaurantId/menus/:menuId/food", authenticated, sesionController.loginUser)
+  .get("/restaurants/:restaurantId/menus/:menuId/food", authenticated, sesionController.loginUser)
+  .get("/restaurants/:restaurantId/menus/:menuId/foods/:foodId", authenticated, sesionController.loginUser)
+  .put("/restaurants/:restaurantId/menus/:menuId/foods/:foodId", authenticated, sesionController.loginUser)
+  .delete("/restaurants/:restaurantId/menus/:menuId/foods/:foodId", authenticated, sesionController.loginUser)
+  ;
